# rbac

./: .env.example  .gitignore  README.md  docker-compose.yml  logs.ps1  restart.ps1  setup.ps1  stop.ps1
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 001_create_users.sql
backend/src/: main.rs  state.rs
backend/src/cache/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  user.rs
backend/src/middleware/: auth.rs  jwt.rs
backend/src/models/: user.rs
backend/src/routes/: mod.rs
frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/layout/: Navbar.tsx
frontend/hooks/: useAuth.tsx
frontend/lib/: admin.ts  api.ts  auth.ts
frontend/types/: index.ts
