[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

# Cache
redis = { version = "0.24", features = ["tokio-comp"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
